--- a/mike.html
+++ b/mike.html
@@ -6,10 +6,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class="flex justify-center items-center">
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+  <div class="flex flex-row p-6">
+    <div class="w-24 h-24  flex items-center justify-center">
+      <div class="w-16 h-16 bg-gray-400 rounded-full"></div>
+    </div>
+    <div class="flex-1  min-h-[24px]">
+      <div class="w-full text-3xl">
+        Mike Silva 
+      </div>
+      <div class="w-full text-gray-400 text-sm">ART IS LIFE</div>
+    </div>
   </div>
+ 
 </body>
 </html>
