--- a/mike.html
+++ b/mike.html
@@ -1,22 +1,61 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>My new LP</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">  
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="flex flex-row p-6">
-    <div class="w-24 h-24  flex items-center justify-center">
-      <div class="w-16 h-16 bg-gray-400 rounded-full"></div>
-    </div>
-    <div class="flex-1  min-h-[24px]">
-      <div class="w-full text-3xl">
-        Mike Silva 
+  <div class="hero-img"></div>
+   <div class="wrapper">
+    <header>
+      <a href="#" class="logo">Art<span>Life</span></a>
+
+     <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Art</a></li>
+        <li><a href="#">More Art</a></li>
+      </ul>
+     
+     </nav>G
+    </header>
+
+    <section class="hero">
+      <h1>Seeing life through art.</h1>
+      
+      <p class="subhead">Art photos with purpose that take you to the next level.</p>
+
+    </section>
+
+    <section class="more-info">
+      <div class="feature">
+        <div class="content">
+          <p class="title red">Artwork</p>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, incidunt excepturi quaerat nostrum illum natus! Distinctio iure, aspernatur amet minus ducimus architecto aperiam. Fuga cum asperiores tempora provident praesentium doloremque!</p>
+        </div>
+        <img src="images/art1.jpg" alt="painting">
       </div>
-      <div class="w-full text-gray-400 text-sm">ART IS LIFE</div>
-    </div>
+      <div class="feature-left">
+        <div class="content">
+          <p class="title">Artwork</p>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, incidunt excepturi quaerat nostrum illum natus! Distinctio iure, aspernatur amet minus ducimus architecto aperiam. Fuga cum asperiores tempora provident praesentium doloremque!</p>
+        </div>
+        <img src="images/art2.jpg" alt="painting">
+      </div>
+      <div class="feature">
+        <div class="content">
+          <p class="title">Artwork</p>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, incidunt excepturi quaerat nostrum illum natus! Distinctio iure, aspernatur amet minus ducimus architecto aperiam. Fuga cum asperiores tempora provident praesentium doloremque!</p>
+        </div>
+        <img src="images/art3.jpg" alt="painting">
+      </div>
+    </section>
   </div>
- 
 </body>
 </html>
